<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/hello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="12dp"
        android:text="@string/hello"
        android:gravity="center"
        android:textColor="#171717"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro"
        android:gravity="center"
        android:layout_below="@id/hello"
        android:textColor="#171717"
        android:textSize="24sp"
         />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/intro"
        android:layout_marginTop="12dp"
        app:tabIndicatorColor="#000000">

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dnba"></com.google.android.material.tabs.TabItem>

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jaffe" />

    </com.google.android.material.tabs.TabLayout>


    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:background="#FAFAFA"
        android:text="@string/start"
        android:textColor="#000000"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        />

    <LinearLayout
        android:id="@+id/inputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/tabs"
        android:layout_marginTop="24dp"
        android:paddingHorizontal="16dp"
        >

        <EditText
            android:id="@+id/a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColorHighlight="#000000"
            android:backgroundTint="#000000"
            android:hint="@string/a"
            android:inputType="numberDecimal"
            android:textColor="#000000"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/equation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text=""
            android:textSize="18sp" />

        <EditText
            android:id="@+id/b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColorHighlight="#000000"
            android:backgroundTint="#000000"
            android:gravity="center"
            android:hint="@string/b"
            android:inputType="numberDecimal"
            android:textColor="#000000"
            android:textColorLink="#000000"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/iso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputs"
        android:layout_marginTop="24px"
        android:gravity="center"
        android:text="placeholder"
        android:textColor="#000000"
        android:textColorLink="#000000"
        android:textSize="24sp" />

</RelativeLayout>